; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/extr_kuhl_m_sekurlsa.c_kuhl_m_sekurlsa_minidump.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/extr_kuhl_m_sekurlsa.c_kuhl_m_sekurlsa_minidump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i32] [i32 83, i32 119, i32 105, i32 116, i32 99, i32 104, i32 32, i32 116, i32 111, i32 32, i32 77, i32 73, i32 78, i32 73, i32 68, i32 85, i32 77, i32 80, i32 32, i32 58, i32 32, i32 0], align 4
@.str.1 = private unnamed_addr constant [40 x i32] [i32 60, i32 109, i32 105, i32 110, i32 105, i32 100, i32 117, i32 109, i32 112, i32 102, i32 105, i32 108, i32 101, i32 46, i32 100, i32 109, i32 112, i32 62, i32 32, i32 97, i32 114, i32 103, i32 117, i32 109, i32 101, i32 110, i32 116, i32 32, i32 105, i32 115, i32 32, i32 109, i32 105, i32 115, i32 115, i32 105, i32 110, i32 103, i32 10, i32 0], align 4
@pMinidumpName = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [6 x i32] [i32 39, i32 37, i32 115, i32 39, i32 10, i32 0], align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_sekurlsa_minidump(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %5 = call i32 (i8*, ...) @kprintf(i8* bitcast ([22 x i32]* @.str to i8*))
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 1
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 @PRINT_ERROR(i8* bitcast ([40 x i32]* @.str.1 to i8*))
  br label %18

10:                                               ; preds = %2
  %11 = call i32 (...) @kuhl_m_sekurlsa_reset()
  %12 = load i32**, i32*** %4, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @_wcsdup(i32* %14)
  store i32 %15, i32* @pMinidumpName, align 4
  %16 = load i32, i32* @pMinidumpName, align 4
  %17 = call i32 (i8*, ...) @kprintf(i8* bitcast ([6 x i32]* @.str.2 to i8*), i32 %16)
  br label %18

18:                                               ; preds = %10, %8
  %19 = load i32, i32* @STATUS_SUCCESS, align 4
  ret i32 %19
}

declare dso_local i32 @kprintf(i8*, ...) #1

declare dso_local i32 @PRINT_ERROR(i8*) #1

declare dso_local i32 @kuhl_m_sekurlsa_reset(...) #1

declare dso_local i32 @_wcsdup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
